# ForensicHub

./: .gitignore  README.md  SCD.dvc  config_mlops.yaml  create_dataset.py  datasets.txt  datasets_2.txt  datasets_25.txt  datasets_3.txt  datasets_800.txt  nohup.sh  pyproject.toml  requirements.txt  setup.py  test_create_dataset.sh  test_create_dataset_2.sh  test_create_dataset_25.sh  test_create_dataset_3.sh  test_create_dataset_800.sh
.dvc/: config
.github/script/: script.py
.github/workflows/: cml-stream-opencv.yml  mlops.yml  publish.yml
DeepfakeBench/training/dataset/: fwa_blend.py
DeepfakeBench/training/detectors/: __init__.py
ForensicHub/: cli.py  run.sh  run2.sh  run25_ffdn.sh  run25_mesorch.sh  run2_2.sh  run3.sh  run800_ffdn.sh  run800_mesorch.sh
ForensicHub/cli_funcs/: __init__.py  cli_train_test.py
ForensicHub/common/: __init__.py
ForensicHub/common/evaluation/: __init__.py
ForensicHub/common/transforms/: __init__.py  pillow_transforms.py
ForensicHub/common/utils/: yaml.py
ForensicHub/common/wrapper/: mask2labelwrapper.py  sliding_window_merge.py  sliding_window_wrapper.py
ForensicHub/statics/: run.sh
ForensicHub/statics/doc/: adcd_net_train.yaml  adcd_net_train_v100.yaml  ffdn_test_sliding_window.yaml  ffdn_train.yaml  ffdn_train_25.yaml  ffdn_train_pillow.yaml
ForensicHub/statics/mask2label/: mesorch_train.yaml  mesorch_train2.yaml  mesorch_train_25.yaml  mesorch_train_pillow.yaml  trufor_train copy.yaml  trufor_train.yaml
ForensicHub/statics/run/: example_run.yaml  example_run_label.yaml
ForensicHub/tasks/aigc/models/fatformer/clip/: clip.py
ForensicHub/tasks/aigc/models/univfd/models/clip/: clip.py
ForensicHub/tasks/document/datasets/: doc_dataset.py  doccrossdataset.py
ForensicHub/tasks/document/models/adcd_net/: __init__.py  adcd_net.py  adcd_net_post_function.py  fph.py  loss.py  restormer.py
ForensicHub/tasks/document/models/ffdn/: backbone_convnext.py  dwt.py  ffdn.py
ForensicHub/tasks/document/transforms/: doc_transforms.py
ForensicHub/tasks/imdl/transforms/: iml_transforms.py
ForensicHub/training_scripts/: run.py  test.py  train.py
ForensicHub/training_scripts/trainer/: trainer.py
ForensicHub/training_scripts/utils/: misc.py
tests/: test_sliding_window_pixels.py
wheel/: dvc-3.63.0-py3-none-any.whl
