[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forensichub"
dynamic = ["version"]
description = "A codebase integrated Image manipulation detection & localization, Deepfake detection, Document manipulation detection and AIGC detection."
readme = "README.md"
requires-python = ">=3.7,<4"
license = { text = "CC-BY-4.0" }

authors = [
    { name = "Xiaochen Ma", email = "xiaochen.ma.cs@gmail.com" }
]

keywords = [
    "AI",
    "artificial intelligence",
    "image forensics",
    "image manipulation localization",
    "image manipulation detection",
    "Deepfake detection",
    "AIGC detection"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "albumentations==1.3.0",
    "appdirs==1.4.4",
    "colorama==0.4.6",
    "efficientnet_pytorch==0.7.1",
    "einops==0.8.1",
    "ftfy==6.3.1",
    "grad_cam==1.5.5",
    "imageio==2.37.2",
    "imdlbenco==0.1.44",
    "imutils==0.5.4",
    "jpegio==0.2.8",
    "kmeans_pytorch==0.3",
    "lmdb==1.7.5",
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "opencv_python==4.11.0.86",
    "opencv_python_headless==4.11.0.86",
    "pillow==12.1.0",
    "pytorch_wavelets==1.3.0",
    "regex==2026.1.15",
    "Requests==2.32.5",
    "rich==14.2.0",
    "scikit_learn==1.8.0",
    "segmentation_models_pytorch==0.5.0",
    "six==1.17.0",
    "tensorflow==2.20.0",
    "timm==1.0.24",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "ttach==0.0.3",
    "yacs==0.1.8",
    "simplejson==3.20.2",
    "kornia==0.8.2",
    "loralib==0.1.2",
    "transformers==4.57.5",
    "dlib==20.0.0",
    "imgaug==0.4.0"
]

[project.urls]
Homepage = "https://github.com/scu-zjz/ForensicHub"
Documentation = "https://github.com/scu-zjz/ForensicHub-doc"
Issues = "https://github.com/scu-zjz/ForensicHub/issues"

[project.scripts]
forhub = "ForensicHub.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools.dynamic]
version = { attr = "ForensicHub.version.__version__" }
